2006-06-05  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* lib/widgets/ephy-location-entry.c: (keyword_match):
	Improve next-token logic for bookmark completion. Fixes
	#339167 (hopefully for real this time).

2006-06-04  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphySidebar.cpp:

	The API change was reverted on 1.8 branch. Fixes bug #343592.

2006-06-01  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/ephy-embed-persist.h: 
	* embed/ephy-favicon-cache.c: (ephy_favicon_cache_download):
	* embed/mozilla/EphySingle.cpp: 
	(Init, Detach, ExamineCookies, ExamineResponse, ExamineRequest, Observe):
	* embed/mozilla/EphySingle.h:
	* embed/mozilla/MozDownload.cpp: (InitiateMozillaDownload):

	Don't set cookies from favicon downloads. Bug #337835.
	
2006-05-30  Frederic Peters  <fpeters@0d.be>

	* src/pdm-dialog.c: (pdm_dialog_cookies_construct):
	
	Allow cookie list to be sorted.  (fixes #337845)

2006-05-30  Frederic Peters  <fpeters@0d.be>

	* lib/egg/egg-editable-toolbar.c: (action_sensitive_cb)

	Fix crash when moving zoom widget on toolbar (#338682)

2006-05-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-file-helpers.c: (ephy_file_launch_application),
	(launch_desktop_item):

	Fix launching of desktop files.

2006-05-16  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* lib/ephy-node.h:
	* lib/ephy-node.c:
	* src/epiphany.defs:

	Add methods to EphyNode to set typed properties. This change improves the
	Python API so it should be easy now to play with bookmarks.

	Also clean up the code with unnecessary checks.

2006-05-16  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: 
	
	Update intltool requirement to 0.35.

2006-05-15  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-05-15  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.15.2 ===

	* NEWS:

2006-05-15  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyHeaderSniffer.cpp:
	* embed/mozilla/EphyUtils.cpp: