@@ -1,3 +1,9 @@
+2006-06-04  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/bookmarks/ephy-bookmarks.c: (resolve_cb):
+
+	Don't crash on error from zeroconf bookmarks. Fixes bug #343922.
+
 2006-06-05  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
 
 	* lib/widgets/ephy-location-entry.c: (keyword_match):
